--- a/app/src/main/res/layout/activity_students.xml
+++ b/app/src/main/res/layout/activity_students.xml
@@ -112,6 +112,50 @@
                     android:id="@+id/inputName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/layoutSurname1"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:hint="Primer Cognom"
+                android:layout_gravity="center"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                app:boxCornerRadiusTopStart="30dp"
+                app:boxCornerRadiusTopEnd="30dp"
+                app:boxCornerRadiusBottomStart="30dp"
+                app:boxCornerRadiusBottomEnd="30dp"
+                app:counterMaxLength="10">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/inputSurame1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/layoutSurname2"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:hint="Segon cognom"
+                android:layout_gravity="center"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                app:boxCornerRadiusTopStart="30dp"
+                app:boxCornerRadiusTopEnd="30dp"
+                app:boxCornerRadiusBottomStart="30dp"
+                app:boxCornerRadiusBottomEnd="30dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/inputSurname2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
                     />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -138,14 +182,53 @@
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/ButtonResgisterAlumne1"
                     style="@style/Widget.MaterialComponents.Button"
-                    android:layout_width="120sp"
+                    android:layout_width="130sp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:layout_gravity="center"
                     android:text="@string/registrar"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:cornerRadius="30dp"/>
+                    app:cornerRadius="30dp" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/ButtonRecuperarAlumne1"
+                    style="@style/Widget.MaterialComponents.Button"
+                    android:layout_width="130sp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_gravity="center"
+                    android:text="Recuperar"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:cornerRadius="30dp"
+                    android:backgroundTint="@color/BlueDark"/>
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/ButtonEditarAlumne1"
+                    style="@style/Widget.MaterialComponents.Button"
+                    android:layout_width="130sp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_gravity="center"
+                    android:text="Editar"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:cornerRadius="30dp"
+                    android:backgroundTint="@color/BlueDarker"/>
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/ButtonEliminarAlumne1"
+                    style="@style/Widget.MaterialComponents.Button"
+                    android:layout_width="130sp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_gravity="center"
+                    android:text="Eliminar"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:cornerRadius="30dp"
+                    android:backgroundTint="#d32f2f"/>
 
             </LinearLayout>
         </LinearLayout>
