--- a/app/src/main/res/layout/activity_professor.xml
+++ b/app/src/main/res/layout/activity_professor.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="0dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -27,7 +27,7 @@
             </TextView>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/emailLayout"
+                android:id="@+id/emailLayoutP"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:hint="@string/email"
@@ -40,7 +40,7 @@
                 app:boxCornerRadiusBottomEnd="30dp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/inputEmail"
+                    android:id="@+id/inputEmailP"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textEmailAddress"
@@ -50,7 +50,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/passwordLayout"
+                android:id="@+id/passwordLayoutP"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:hint="@string/contrasenya"
@@ -64,7 +64,7 @@
                 app:boxCornerRadiusBottomEnd="30dp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/inputPassword"
+                    android:id="@+id/inputPasswordP"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
@@ -73,7 +73,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/layoutRepeatPassword"
+                android:id="@+id/layoutRepeatPasswordP"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:hint="Repeteix contrasenya"
@@ -87,7 +87,7 @@
                 app:boxCornerRadiusBottomEnd="30dp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/inputRepeatPassword"
+                    android:id="@+id/inputRepeatPasswordP"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
@@ -97,7 +97,7 @@
 
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/layoutName"
+                android:id="@+id/layoutNameP"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:hint="Nom"
@@ -109,30 +109,58 @@
                 app:boxCornerRadiusBottomEnd="30dp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/inputName"
+                    android:id="@+id/inputNameP"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/layoutSurname1P"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:hint="Primer Cognom"
+                android:layout_gravity="center"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                app:boxCornerRadiusTopStart="30dp"
+                app:boxCornerRadiusTopEnd="30dp"
+                app:boxCornerRadiusBottomStart="30dp"
+                app:boxCornerRadiusBottomEnd="30dp"
+                app:counterMaxLength="10">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/inputSurname1P"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/layoutSurname2P"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:hint="Segon cognom"
+                android:layout_gravity="center"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                app:boxCornerRadiusTopStart="30dp"
+                app:boxCornerRadiusTopEnd="30dp"
+                app:boxCornerRadiusBottomStart="30dp"
+                app:boxCornerRadiusBottomEnd="30dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/inputSurname2P"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
                     />
 
             </com.google.android.material.textfield.TextInputLayout>
 
 
-            <CheckBox
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="55dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Grup A"/>
-            <CheckBox
-                android:layout_marginLeft="55dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Grup B"/>
-            <CheckBox
-                android:layout_marginLeft="55dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Grup C"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -151,44 +179,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:cornerRadius="30dp" />
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/ButtonRecuperarProfessor"
-                    style="@style/Widget.MaterialComponents.Button"
-                    android:layout_width="130sp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:layout_gravity="center"
-                    android:text="Recuperar"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:cornerRadius="30dp"
-                    android:backgroundTint="@color/BlueDark"/>
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/ButtonEditarProfessor"
-                    style="@style/Widget.MaterialComponents.Button"
-                    android:layout_width="130sp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:layout_gravity="center"
-                    android:text="Editar"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:cornerRadius="30dp"
-                    android:backgroundTint="@color/BlueDarker"/>
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/ButtonEliminarProfessor"
-                    style="@style/Widget.MaterialComponents.Button"
-                    android:layout_width="130sp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:layout_gravity="center"
-                    android:text="Eliminar"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:cornerRadius="30dp"
-                    android:backgroundTint="#d32f2f"/>
 
             </LinearLayout>
         </LinearLayout>
